--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,11 @@
     <string name="fundo2">fundo2</string>
     <string name="image2splash">Image2Splash</string>
     <string name="email">Email</string>
-    <string name="menssageEmailError">Você precisa inserir um e-mail válido!</string>
+    <string name="messageEmailError">Você precisa inserir um e-mail válido!</string>
     <string name="messagePasswordError">Você precisa inserir uma senha válida!</string>
+    <string name="cadastro">Cadastro</string>
+    <string name="cadastrar">Cadastrar</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="nome">Nome</string>
+    <string name="messageNameError">Você precisa inserir um nome válido!</string>
 </resources>
