--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="title_activity_home_screen">HomeScreen</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Nome Completo</string>
+    <string name="nav_header_subtitle">exemplo@gmail.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="menu_home">Restaurantes</string>
@@ -18,21 +18,20 @@
     <string name="forget_password" />
     <string name="remember_me" />
     <string name="enter_phone_number" />
-    <string name="e_mail">E-mail</string>
-    <string name="loginText">LOGIN</string>
-    <string name="entrar">Entrar</string>
-    <string name="password">Password</string>
-    <string name="logar">Logar</string>
-    <string name="fundo2">fundo2</string>
-    <string name="image2splash">Image2Splash</string>
     <string name="email">Email</string>
+    <string name="textLoginPage">LOGIN</string>
+    <string name="log_in">Entrar</string>
+    <string name="password">Password</string>
+    <string name="textLogin">Logar</string>
+    <string name="bottom2">bottom2</string>
+    <string name="image2splash">Image2Splash</string>
     <string name="messageEmailError">Você precisa inserir um e-mail válido!</string>
     <string name="messagePasswordError">Você precisa inserir uma senha válida!</string>
     <string name="messageLoginError">Seu email ou senha estão incorretos!</string>
     <string name="messagePasswordErrorSecondary">Você precisa confimar sua senha!</string>
-    <string name="cadastro">Cadastro</string>
-    <string name="cadastrar">Cadastrar</string>
+    <string name="textSignUpPage">Cadastro</string>
+    <string name="SignUp">Cadastrar</string>
     <string name="confirm_password">Confirm Password</string>
-    <string name="nome">Nome</string>
+    <string name="name">Nome</string>
     <string name="messageNameError">Você precisa inserir um nome válido!</string>
 </resources>
