--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,14 @@
     <string name="name_restaurant">Nome Restaurante</string>
     <string name="name">Nome</string>
     <string name="save">Salvar</string>
+    <string name="logo_university">logo</string>
+    <string name="university_1">Pontifícia Universidade Católica do Paraná</string>
+    <string name="address_puc">Endereço: R. Imac. Conceição, 1155 - Prado Velho, Curitiba - PR, 80215-901</string>
+    <string name="icon_fav">icon_fav</string>
+    <string name="university_2">UNICURITIBA</string>
+    <string name="address_unicuritiba">Endereço: R. Chile, 1678 - Rebouças, Curitiba - PR, 80220-181</string>
+    <string name="university_3">Universidade Tuiuti do Paraná</string>
+    <string name="address_utp">Endereço: Rua Sydnei Antonio Rangel Santos, 238 - Santo Inácio, Curitiba - PR, 82010-330</string>
+    <string name="university_4">Universidade Positivo</string>
+    <string name="address_up">Endereço: R. Prof. Pedro Viriato Parigot de Souza, 5300</string>
 </resources>
