added new items at starbucks, mc donalds and subway

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="descriptionitem">DescriptionItem</string>
     <string name="valor_item">Valor: R$</string>
     <string name="imageitem">imageItem</string>
+    <string name="_0">0,00</string>
 </resources>
