added listview on payment screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,6 @@
     <string name="add">Adicionar</string>
     <string name="finalizing_order">Finalizar Pedido</string>
     <string name="subtext_payment">Selecione uma forma de pagamento</string>
+    <string name="delivery">Delivery</string>
+    <string name="form_of_payment">Forma de pagamento</string>
 </resources>
